manifests/hugocortes.ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: hugocortes
  labels:
    istio-injection: enabled
