manifests/istio-injection.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: spin-system
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: ingress-system
  labels:
    istio-injection: enabled
    certmanager.k8s.io/disable-validation: "true"
