manifests/openfaas.ns.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: openfaas
  labels:
    istio-injection: enabled
