manifests/echo.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 0
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo
        args:
        - "-text=echo"
        ports:
        - containerPort: 5678
        resources:
          limits:
            cpu: 10m
            memory: 10Mi

---

apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: istio-system
spec:
  selector:
    app: echo
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5678
