manifests/openfaas-system.istio.yaml
# permissive policies for istio grafana

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: openfaas-prometheus-permissive
  namespace: openfaas-system
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE
