manifests/openfaas.istio.yaml
# permissive policies for istio grafana

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus-permissive
  namespace: openfaas
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE
