manifests/storage.istio.yaml
# permissive policies for istio grafana

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis-prometheus-permissive
  namespace: storage
spec:
  host: redis-metrics
  trafficPolicy:
    tls:
      mode: DISABLE
